# gscal

./: .gitignore  README.md  setup.cfg
config/: gscal.toml  scal.toml
src/: main.py
src/gscal/: gscal.py  main.py
src/gscal/data/: help.txt
src/minical/: main.py
