[metadata]
name = gscal
version = 0.1.0
license = GPL-3
license_file = LICENSE
author = Azad Ahmadi
author_email = azadahmadi@mailo.com
description = GTK Simple Calendar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Akmadan23/gscal
project_urls =
    Bug Tracker = https://github.com/Akmadan23/gscal/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    PyGObject
    toml

[options.entry_points]
console_scripts =
    gscal = gscal.main:run

[options.packages.find]
where = src
