[metadata]
name = gscal
version = 0.2.0
license = GPL-3
license_file = LICENSE
author = Azad Ahmadi
author_email = azadahmadi@mailo.com
description = GTK Simple Calendar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Akmadan23/gscal
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    PyGObject
    toml

[options.entry_points]
console_scripts =
    gscal = gscal.main:run

[options.package_data]
gscal = data/*.txt

[options.packages.find]
where = src
